--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <DOCTYPE! html>
-<h1>hello world! </h1>h1>
 <html>
-
+	<head>
+		<title>Kayla Green's Profile</title>
+	</head>
+	<body>
+		<h1><a href="Girls Who Code: Kayla Green"></a>
+	</body>>
+	
+<html>
+  
 	
