--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 		<title>Kayla Green's Profile</title>
 	</head>
 	<body>
-		<h1><a href="Girls Who Code: Kayla Green"></a>
-	</body>>
+		<h1>Girls Who Code: Kayla Green</h1>
+		<h5><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Phyllorhiza_punctata_(White-spotted_jellyfish)_edit.jpg" height="150" width="150"></h5>
+		
+		About Me: 
+		My full name is Kayla Adia Monique Green. I was born and mostly raised is Sacramento, CA. I have two siblings and I enjoy being on the phone.
+
+		Projects: 
+		One of my favorite projects was making the arduinio robots dance. The robot I worked on was TEK and it did the cupid shuffle. 
+ 	</body>
 	
 <html>
   
