--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
 	<head>
 		<title>Kayla Green's Profile</title>
-	</head>
+		<link rel="stylesheet" href= "css/styles.css">
 	<body>
 		<h1>Girls Who Code: Kayla Green</h1>
-		<h5><img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Phyllorhiza_punctata_(White-spotted_jellyfish)_edit.jpg" height="150" width="150"></h5>
+		<img src="images/IMG_7113 - Copy.JPG" width="150">
+		<h2>Striving for Greatness</h2>
 		
-		About Me: 
-		My full name is Kayla Adia Monique Green. I was born and mostly raised is Sacramento, CA. I have two siblings and I enjoy being on the phone.
+		<h4>About Me:</h4> 
+		<p>My full name is Kayla Adia Monique Green. I was born and mostly raised is Sacramento, CA. I have two siblings and I enjoy being on the phone. I also enjoy ejoy eating. My favorite place would be my room beacuse i would be away from other people!</p>
 
-		Projects: 
-		One of my favorite projects was making the arduinio robots dance. The robot I worked on was TEK and it did the cupid shuffle. 
+		<h5>Projects:</h5> 
+		<p>One of my favorite projects was making the arduinio robots dance. The robot I worked on was TEK and it did the cupid shuffle. Another favorite project of mine was the Madlibs.</p>
+
+		<h3>Contact:</h3>
+		<p>If anyone needs to contact me for my services, feel free to email me @kamg2018@gmail.com. Serious busuiness inquiries only!</p>
  	</body>
 	
 <html>
