--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h2>Striving for Greatness</h2>
 		
 		<h4>About Me:</h4> 
-		<p>My full name is Kayla Adia Monique Green. I was born and mostly raised is Sacramento, CA. I have two siblings and I enjoy being on the phone. I also enjoy ejoy eating. My favorite place would be my room beacuse i would be away from other people!</p>
+		<p>My name is Kayla Green. I was born and mostly raised is Sacramento, CA. I have two siblings and I enjoy being on the phone. I also enjoy ejoy eating. My favorite place would be my room beacuse i would be away from other people!</p>
 
 		<h5>Projects:</h5> 
 		<p>One of my favorite projects was making the arduinio robots dance. The robot I worked on was TEK and it did the cupid shuffle. Another favorite project of mine was the Madlibs.</p>
