--- a/equality.html
+++ b/equality.html
@@ -4,6 +4,7 @@
 	<title>Equality</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/equality.css">
+	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 	<h1>Bring in Equality</h1>
@@ -44,7 +45,10 @@
 					</div>
 			</div>
 		</div>
+
+		
+
 	</div>		
-			<
+		
 	</body>
 </html> 
