--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<title>Kayla Green's Profile</title>
+		<script src="http://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+		<script src="js/custom.js"></script>
 		<link rel="stylesheet" href= "css/styles.css">
+	</head>
 	<body>
 		<h1>Girls Who Code: Kayla Green</h1>
 		<img src="images/IMG_7113 - Copy.JPG" width="150">
